header2 is complete for component

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,13 @@
     transform: rotate(360deg);
   }
 }
+
+.header-two {
+  text-transform: uppercase;
+}
+
+.nav-bar { 
+  display: flex; 
+  flex-direction: row;
+  padding: 20px;
+}
